objects/pepBank_API_Details__c.object
<CustomObject>
    <fields>
        <fullName>Preload_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preload Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepAttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepBank_Logo__c</fullName>
        <formula>IMAGE( pepImage_URL__c , &apos;Bank Logo&apos; , 50, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepBank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepBank_Short_Name__c</fullName>
        <label>Bank Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepBank_Slug_Name__c</fullName>
        <label>Bank Slug Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepImage_URL__c</fullName>
        <formula>IF( pepAttachmentId__c   &lt;&gt; null, &quot;/servlet/servlet.FileDownload?file=&quot; &amp; pepAttachmentId__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <label>Bank API Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>pepBank_Name__c</columns>
        <columns>pepBank_Short_Name__c</columns>
        <columns>pepBank_Slug_Name__c</columns>
        <columns>pepBank_Logo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BNK-{0000}</displayFormat>
        <label>Bank API Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank API Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>